Se cambió a color de fondo rojo el hover al boton de reinicio

--- a/CSS/estilosME.css
+++ b/CSS/estilosME.css
@@ -59,7 +59,8 @@ h2 {
 }
 
 #boton-reiniciar:hover {
-    background: #009aff;
+    border: 3px solid #ff4646;
+    background: #ff4646;
     color: white;
 }
 
